[gd_scene load_steps=3 format=3]

[ext_resource type="Theme" path="res://ui/MainMenuTheme.tres" id="1_theme"]
[ext_resource type="Script" path="res://ui/SettingsOverlay.gd" id="2_script"]

[node name="SettingsOverlay" type="CanvasLayer"]
layer = 60
script = ExtResource("2_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.9)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1_theme")

[node name="SettingsContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0

[node name="Header" type="VBoxContainer" parent="UI/SettingsContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/SettingsContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/SettingsContainer"]
layout_mode = 2

[node name="AudioSettings" type="VBoxContainer" parent="UI/SettingsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MasterVolume" type="HBoxContainer" parent="UI/SettingsContainer/AudioSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/SettingsContainer/AudioSettings/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"

[node name="Slider" type="HSlider" parent="UI/SettingsContainer/AudioSettings/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="ValueLabel" type="Label" parent="UI/SettingsContainer/AudioSettings/MasterVolume"]
layout_mode = 2
text = "100%"

[node name="MusicVolume" type="HBoxContainer" parent="UI/SettingsContainer/AudioSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/SettingsContainer/AudioSettings/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"

[node name="Slider" type="HSlider" parent="UI/SettingsContainer/AudioSettings/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="ValueLabel" type="Label" parent="UI/SettingsContainer/AudioSettings/MusicVolume"]
layout_mode = 2
text = "100%"

[node name="SFXVolume" type="HBoxContainer" parent="UI/SettingsContainer/AudioSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/SettingsContainer/AudioSettings/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX Volume"

[node name="Slider" type="HSlider" parent="UI/SettingsContainer/AudioSettings/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="ValueLabel" type="Label" parent="UI/SettingsContainer/AudioSettings/SFXVolume"]
layout_mode = 2
text = "100%"

[node name="HSeparator2" type="HSeparator" parent="UI/SettingsContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="UI/SettingsContainer"]
layout_mode = 2
alignment = 1

[node name="TestSFXButton" type="Button" parent="UI/SettingsContainer/ButtonContainer"]
layout_mode = 2
text = "Test Sound"

[node name="Spacer" type="Control" parent="UI/SettingsContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="UI/SettingsContainer/ButtonContainer"]
layout_mode = 2
text = "Close"